--- a/app/src/main/res/layout/fragment_running.xml
+++ b/app/src/main/res/layout/fragment_running.xml
@@ -2,18 +2,62 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <SurfaceView
-        android:layout_above="@+id/stopButton"
-        android:id="@+id/surfaceView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_above="@+id/stopButton"
+        android:orientation="vertical">
+
+        <FrameLayout
+            android:id="@+id/frameLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <com.otaliastudios.cameraview.CameraView
+                app:cameraPlaySounds="false"
+                android:id="@+id/cameraView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+            <!--<jp.yuta.kohashi.sotsuseicameraapp.ui.view.CameraView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:id="@+id/cameraView"/>-->
+
+            <!--<jp.yuta.kohashi.sotsuseicameraapp.ui.view.CameraView-->
+                <!--android:id="@+id/cameraView"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                 <!--/>-->
+        </FrameLayout>
+
+        <!--<FrameLayout-->
+            <!--android:id="@+id/frameLayout2"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:layout_weight="1">-->
+
+            <!--<ImageView-->
+                <!--android:id="@+id/imageView"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:src="@mipmap/ic_launcher" />-->
+        <!--</FrameLayout>-->
+    </LinearLayout>
+
+
+    <!--<com.google.android.cameraview.CameraView-->
+    <!--android:layout_above="@+id/stopButton"-->
+    <!--android:id="@+id/cameraView"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent" />-->
 
     <Button
         android:id="@+id/stopButton"
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:text="stop"/>
+        android:layout_alignParentBottom="true"
+        android:text="stop" />
 </RelativeLayout>
