サードパーティのバージョンと独自viewバージョンを追加

--- a/app/src/main/res/layout/fragment_running.xml
+++ b/app/src/main/res/layout/fragment_running.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,34 +15,52 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <com.otaliastudios.cameraview.CameraView
-                app:cameraPlaySounds="false"
+            <!--<com.otaliastudios.cameraview.CameraView-->
+            <!--app:cameraPlaySounds="false"-->
+            <!--android:id="@+id/cameraView"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"/>-->
+
+            <!--<com.flurgle.camerakit.CameraView-->
+            <!--android:id="@+id/cameraView"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:adjustViewBounds="true"/>-->
+            <jp.yuta.kohashi.sotsuseicameraapp.ui.view.CameraView2
                 android:id="@+id/cameraView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-            <!--<jp.yuta.kohashi.sotsuseicameraapp.ui.view.CameraView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:id="@+id/cameraView"/>-->
+                android:layout_height="match_parent" />
+            <ImageView
+                android:scaleType="fitCenter"
+                android:id="@+id/imageView"
+                android:layout_width="120dp"
+                android:layout_height="160dp"
+                android:layout_gravity="bottom|end"/>
+            <!--<ImageView-->
+                <!--android:scaleType="fitCenter"-->
+                <!--android:id="@+id/imageView"-->
+                <!--android:layout_width="120dp"-->
+                <!--android:layout_height="160dp"-->
+                <!--android:layout_gravity="bottom|end"/>-->
 
             <!--<jp.yuta.kohashi.sotsuseicameraapp.ui.view.CameraView-->
-                <!--android:id="@+id/cameraView"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                 <!--/>-->
+            <!--android:id="@+id/cameraView"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--/>-->
         </FrameLayout>
 
         <!--<FrameLayout-->
-            <!--android:id="@+id/frameLayout2"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp"-->
-            <!--android:layout_weight="1">-->
+        <!--android:id="@+id/frameLayout2"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_weight="1">-->
 
-            <!--<ImageView-->
-                <!--android:id="@+id/imageView"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:src="@mipmap/ic_launcher" />-->
+        <!--<ImageView-->
+        <!--android:id="@+id/imageView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:src="@mipmap/ic_launcher" />-->
         <!--</FrameLayout>-->
     </LinearLayout>
 
@@ -55,6 +72,7 @@
     <!--android:layout_height="match_parent" />-->
 
     <Button
+        android:visibility="gone"
         android:id="@+id/stopButton"
         android:layout_width="match_parent"
         android:layout_height="40dp"
