--- a/app/src/main/res/layout/fragment_running2.xml
+++ b/app/src/main/res/layout/fragment_running2.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,33 +16,15 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <!--<com.otaliastudios.cameraview.CameraView-->
-            <!--app:cameraPlaySounds="false"-->
-            <!--android:id="@+id/cameraView"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"/>-->
-
-            <!--<com.flurgle.camerakit.CameraView-->
-            <!--android:id="@+id/cameraView"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:adjustViewBounds="true"/>-->
-            <jp.yuta.kohashi.sotsuseicameraapp.ui.view.CameraView
+            <com.otaliastudios.cameraview.CameraView
+                app:cameraPlaySounds="false"
                 android:id="@+id/cameraView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-            <ImageView
-                android:scaleType="fitCenter"
-                android:id="@+id/imageView"
-                android:layout_width="120dp"
-                android:layout_height="160dp"
-                android:layout_gravity="bottom|end"/>
-            <!--<ImageView-->
-                <!--android:scaleType="fitCenter"-->
-                <!--android:id="@+id/imageView"-->
-                <!--android:layout_width="120dp"-->
-                <!--android:layout_height="160dp"-->
-                <!--android:layout_gravity="bottom|end"/>-->
+                android:layout_height="match_parent"/>
+            <!--<jp.yuta.kohashi.sotsuseicameraapp.ui.view.CameraView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:id="@+id/cameraView"/>-->
 
             <!--<jp.yuta.kohashi.sotsuseicameraapp.ui.view.CameraView-->
             <!--android:id="@+id/cameraView"-->
