--- a/app/src/main/res/layout/fragment_running.xml
+++ b/app/src/main/res/layout/fragment_running.xml
@@ -26,56 +26,51 @@
             <!--android:layout_width="match_parent"-->
             <!--android:layout_height="match_parent"-->
             <!--android:adjustViewBounds="true"/>-->
-            <jp.yuta.kohashi.sotsuseicameraapp.ui.view.CameraView2
+            <jp.yuta.kohashi.sotsuseicameraapp.ui.view.CameraView
                 android:id="@+id/cameraView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
-            <ImageView
-                android:scaleType="fitCenter"
-                android:id="@+id/imageView"
-                android:layout_width="120dp"
-                android:layout_height="160dp"
-                android:layout_gravity="bottom|end"/>
-            <!--<ImageView-->
-                <!--android:scaleType="fitCenter"-->
-                <!--android:id="@+id/imageView"-->
-                <!--android:layout_width="120dp"-->
-                <!--android:layout_height="160dp"-->
-                <!--android:layout_gravity="bottom|end"/>-->
 
-            <!--<jp.yuta.kohashi.sotsuseicameraapp.ui.view.CameraView-->
-            <!--android:id="@+id/cameraView"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--/>-->
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@android:color/darker_gray"
+                android:padding="5dp">
+
+                <FrameLayout
+                    android:layout_width="160dp"
+                    android:layout_height="120dp"
+                    android:background="@android:color/black">
+
+                    <TextView
+                        android:textSize="10sp"
+                        android:textColor="#e2e2e2"
+                        android:layout_gravity="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="show captured image" />
+
+                    <ImageView
+                        android:id="@+id/imageView"
+                        android:layout_width="160dp"
+                        android:layout_height="120dp"
+                        android:scaleType="fitCenter" />
+
+                </FrameLayout>
+
+            </FrameLayout>
         </FrameLayout>
 
-        <!--<FrameLayout-->
-        <!--android:id="@+id/frameLayout2"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:layout_weight="1">-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageView"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:src="@mipmap/ic_launcher" />-->
-        <!--</FrameLayout>-->
     </LinearLayout>
 
-
-    <!--<com.google.android.cameraview.CameraView-->
-    <!--android:layout_above="@+id/stopButton"-->
-    <!--android:id="@+id/cameraView"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent" />-->
-
     <Button
-        android:visibility="gone"
         android:id="@+id/stopButton"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
-        android:text="stop" />
+        android:text="stop"
+        android:visibility="gone" />
 </RelativeLayout>
