--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,12 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg_main"
     android:orientation="vertical">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="スタート"
-        android:id="@+id/startButton"/>
-</LinearLayout>
+
+    <LinearLayout
+        android:layout_marginBottom="30dp"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/stopButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <!--<TextView-->
+            <!--android:textSize="@dimen/text_size_medium_more"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="カメラ : "-->
+            <!--android:textColor="@color/text_gray_light" />-->
+
+        <!--<TextView-->
+            <!--android:textSize="@dimen/text_size_medium_more"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="5台"-->
+            <!--android:textColor="@color/text_gray_light" />-->
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/startButton"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerInParent="true"
+        android:background="@drawable/bg_btn_round"
+        android:elevation="2dp"
+        android:textColor="@color/text_red"
+        android:textSize="@dimen/text_size_medium_more"
+        android:textStyle="bold">
+
+        <TextView
+            android:id="@+id/stopTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:paddingBottom="10dp"
+            android:text="スタート"
+            android:textColor="@color/text_red"
+            android:textSize="@dimen/text_size_medium_more"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/stopTextView"
+            android:layout_centerHorizontal="true"
+            android:text="(撮影:音量キー押下)"
+            android:textColor="@color/text_gray_medium" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_marginTop="30dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/startButton"
+        android:background="@drawable/bg_running_panel"
+        android:layout_width="250dp"
+        android:layout_height="80dp">
+
+        <!--<RelativeLayout-->
+        <!--android:layout_margin="3dp"-->
+        <!--android:layout_centerInParent="true"-->
+        <!--android:background="@drawable/bg_running_panel"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_width="match_parent">-->
+
+        <!--</RelativeLayout>-->
+
+    </RelativeLayout>
+
+</RelativeLayout>
