--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,9 @@
     <color name="text_gray_medium">#8e8d8d</color>
     <color name="text_gray_dark">#464646</color>
     <color name="text_red">#ef3e52</color>
+
+    <color name="bg_gray_dark">#464646</color>
+    <color name="bg_gray_light">#f9f9f9</color>
+
+    <color name="ic_light_gray">#f1f1f1</color>
 </resources>
