--- a/app/src/main/res/layout/fragment_running.xml
+++ b/app/src/main/res/layout/fragment_running.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,7 +15,6 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
-
             <!--<com.otaliastudios.cameraview.CameraView-->
             <!--app:cameraPlaySounds="false"-->
             <!--android:id="@+id/cameraView"-->
@@ -29,7 +29,9 @@
             <jp.yuta.kohashi.sotsuseicameraapp.ui.view.CameraView
                 android:id="@+id/cameraView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                tools:ignore="all"
+                />
 
             <FrameLayout
                 android:layout_width="wrap_content"
@@ -57,7 +59,7 @@
                         android:id="@+id/imageView"
                         android:layout_width="160dp"
                         android:layout_height="120dp"
-                        android:scaleType="fitCenter" />
+                        android:scaleType="centerCrop" />
 
                 </FrameLayout>
 
@@ -66,11 +68,24 @@
 
     </LinearLayout>
 
-    <Button
+    <ImageButton
+        android:background="@drawable/bg_camara_back"
         android:id="@+id/stopButton"
-        android:layout_width="match_parent"
+        android:layout_margin="10dp"
+        android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:text="stop"
-        android:visibility="gone" />
-</RelativeLayout>
+        android:layout_gravity="bottom|start"
+        android:tint="@color/ic_light_gray"
+        android:src="@drawable/ic_arrow_back"
+        />
+
+    <!--<Button-->
+
+        <!--android:layout_marginBottom="10dp"-->
+        <!--android:layout_marginStart="10dp"-->
+        <!--android:id="@+id/stopButton"-->
+        <!--android:layout_width="40dp"-->
+        <!--android:layout_height="40dp"-->
+        <!--android:layout_gravity="bottom|start"-->
+        <!--android:text="stop" />-->
+</FrameLayout>
